--- a/templates/object.html
+++ b/templates/object.html
@@ -4,119 +4,122 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VarWISE Viewer</title>
+    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <style>
+        :root {
+            color-scheme: light only !important;
+        }
+        body{
+            display: block;
+            padding: 1.75em;
+        }
+        h2{
+            margin-top: 0px;
+            margin-bottom: 0px;
+        }
+        .type{
+            font-size: 32px;
+            padding: 0px 1em;
+            color: #590f0f;
+            font-style: italic;
+        }
+        .frame{
+            width: 100%;
+            display: grid;
+            grid-template-rows: 3.5em 5fr 7fr;
+            grid-auto-flow: row;
+        }
+        td, th {
+            border: 1px solid #dddddd;
+            text-align: left;
+            padding: 8px;
+        }
+
+        tr:nth-child(even) {
+            background-color: #dddddd;  
+        }
+        .title{
+            width: 100%;
+            padding: 10px 10%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            grid-auto-flow: row;
+            vertical-align: middle;
+            margin-bottom: 1em;
+        }
+
+        .center{
+            display: grid;
+            grid-auto-columns: 1fr 1fr;
+            grid-auto-flow: column;
+        }
+
+        .nextprev{
+            font-size: 16px;
+        }
+
+        #title{
+            font-size: 30px;
+            
+        }
+
+        .folding_container{
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            align-items: center;
+            height: 100%;
+        }
+
+        #period{
+            width: 14em;
+            counter-increment: none;
+        }
+
+        #folded_lightcurve{
+            width: 100%;
+            height: 30em;
+        }
+        #lightcurve{
+            width: 100%;
+            height: 35em;
+        }
+        .bottom{
+            display: grid;
+            grid-auto-flow: row;
+            grid-template-columns: 2fr 3fr;
+            margin-top: 2em;
+            padding: 1em;
+        }
+
+        #wiseview{
+            width: 100%;
+            height: 100%;
+            border: 2px solid black;
+            margin: 1em
+            
+        }
+        .home{
+            width: 40px;
+            height: 40px;
+            position: absolute;
+            top: 0;
+            left: 0;
+            margin: 1.75em;
+        }
+    </style>
 </head>
-<link rel="stylesheet" href="css/pico.classless.min.css">
-<link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
-<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-<style>
-    body{
-        display: block;
-        padding: 1.75em;
-    }
-    h2{
-        margin-top: 0px;
-        margin-bottom: 0px;
-    }
-    .type{
-        font-size: 32px;
-        padding: 0px 1em;
-        color: #590f0f;
-        font-style: italic;
-    }
-    .frame{
-        width: 100%;
-        display: grid;
-        grid-template-rows: 3.5em 5fr 7fr;
-        grid-auto-flow: row;
-    }
-    td, th {
-        border: 1px solid #dddddd;
-        text-align: left;
-        padding: 8px;
-    }
-
-    tr:nth-child(even) {
-        background-color: #dddddd;  
-    }
-    .title{
-        width: 100%;
-        padding: 10px 10%;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        grid-auto-flow: row;
-        vertical-align: middle;
-        margin: auto;
-    }
-
-    .center{
-        display: grid;
-        grid-auto-columns: 1fr 1fr;
-        grid-auto-flow: column;
-    }
-
-    .nextprev{
-        font-size: 16px;
-    }
-
-    #title{
-        font-size: 30px;
-        
-    }
-
-    .folding_container{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center;
-        height: 100%;
-    }
-
-    #period{
-        width: 14em;
-        counter-increment: none;
-    }
-
-    #folded_lightcurve{
-        width: 100%;
-        height: 30em;
-    }
-    #lightcurve{
-        width: 100%;
-        height: 35em;
-    }
-    .bottom{
-        display: grid;
-        grid-auto-flow: row;
-        grid-template-columns: 2fr 3fr;
-        margin-top: 2em;
-        padding: 1em;
-    }
-
-    #wiseview{
-        width: 100%;
-        height: 100%;
-        border: 2px solid black;
-        margin: 1em
-        
-    }
-    .home{
-        width: 40px;
-        height: 40px;
-        position: absolute;
-        top: 0;
-        left: 0;
-        margin: 1.75em;
-    }
-</style>
 <body id="body">
 <a href="/" class="home"><svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 26 26"><path d="M 20 2.03125 C 19.449219 2.03125 19 2.480469 19 3.03125 L 19 7.8125 L 13.71875 2.53125 C 13.328125 2.140625 12.671875 2.140625 12.28125 2.53125 L 0.5625 14.28125 C 0.171875 14.671875 0.171875 15.296875 0.5625 15.6875 C 0.953125 16.078125 1.578125 16.078125 1.96875 15.6875 L 13 4.65625 L 24.0625 15.71875 C 24.257813 15.914063 24.523438 16.03125 24.78125 16.03125 C 25.039063 16.03125 25.273438 15.914063 25.46875 15.71875 C 25.859375 15.328125 25.859375 14.703125 25.46875 14.3125 L 22 10.84375 L 22 3.03125 C 22 2.480469 21.550781 2.03125 21 2.03125 Z M 13 6.5 L 2 17.5 L 2 23 C 2 24.65625 3.34375 26 5 26 L 21 26 C 22.65625 26 24 24.65625 24 23 L 24 17.5 Z M 11 16 L 15 16 C 15.550781 16 16 16.449219 16 17 L 16 23 C 16 23.550781 15.550781 24 15 24 L 11 24 C 10.449219 24 10 23.550781 10 23 L 10 17 C 10 16.449219 10.449219 16 11 16 Z"/></svg></a>
 <div class="frame">
     <div class="title">
         <button id="previous" class="nextprev">Previous Object</button>
         <h2 id="title">{{ titletext }} <span class="type">{{ type }}</span></h2>
-        <button id="next" class="nextprev">Next Object</button></div>
+        <button id="next" class="nextprev">Next Object</button>
+    </div>
     <div class="center">
         <div class="left"><div id="lightcurve"></div></div>
 
@@ -175,6 +178,8 @@
 <script type="text/javascript">
     var lightcurve = {{ lc_json | safe }};
     var folded_lightcurve = {{ folded_lc_json | safe }};
+
+    console.l
     Plotly.plot("lightcurve", lightcurve, {responsive: true});
     Plotly.plot("folded_lightcurve", folded_lightcurve, {responsive: true});
 
@@ -214,13 +219,14 @@
     }
 
     document.getElementById("period").addEventListener("change", update_period);
-    var pd = {{ period_peak_1 }};
+    var pd = {{ defaultperiod }};
     document.getElementById("period").value = pd;
     update_period();
 
 
-    var next_id = {{ nextid }};
-    var prev_id = {{ previd }};
+    var prevnext = {{ prevnext | safe }};
+    var prev_id = prevnext[0];
+    var next_id = prevnext[1];
     // Add event listeners to the next and previous buttons
 
     function loading() {
@@ -233,12 +239,12 @@
     document.getElementById("next").addEventListener("click", function(){
         console.log(next_id)
         loading();
-        window.location.href = "/" + next_id;
+        window.location.href = "/object/" + next_id;
     });
     document.getElementById("previous").addEventListener("click", function(){
         console.log(prev_id)
         loading();
-        window.location.href = "/" + prev_id;
+        window.location.href = "/object/" + prev_id;
     });
 </script>
 </body>
